# komtek

./: Procfile  README.md  makefile  pyproject.toml  requirements.txt  runtime.txt  setup.cfg
.github/workflows/: lint.yml  pytest.yml
komtek_test/: settings.py  urls.py
references/: admin.py  models.py  serializers.py  views.py
references/migrations/: 0001_initial.py  0002_alter_refversions_init_date.py  0003_alter_refversions_init_date.py  0004_alter_refversions_init_date.py  0005_alter_refversions_unique_together.py  0006_alter_elements_unique_together.py  0007_alter_refversions_version.py  0008_alter_elements_code_alter_reftitles_description_and_more.py  0009_alter_refversions_options.py
references/tests/: conftest.py  test_db.py  test_elements_list.py  test_referencesAPI.py  test_validation.py
references/tests/fixtures/: db_fixtures.py
